# pick_and_place_ros

./: .gitignore  0_ros2_getting_started.md  1_getting_started_with_mycobot_gazebo.md  1_getting_started_with_mycobot_webots.md  1_getting_started_with_ros2_and_mycobot320.md  2_getting_started_with_mycobot_gazebo.md  3_getting_started_with_mycobot_webots.md  4_move_it_manual.md  LICENSE  README.md
anel_ws/mycobot_gazebo/: anel_robot.sdf  anel_robot.urdf  mycobot_320_gazebo.xacro  package.xml  setup.cfg  setup.py
anel_ws/mycobot_gazebo/urdf/: mycobot_320_m5_2022_gazebo.urdf
anel_ws/mycobot_ros2/: package.xml  setup.cfg  setup.py
anel_ws/mycobot_ros2_description/: package.xml  setup.cfg  setup.py
example_webots/my_package/: package.xml  setup.py
gazebo/: README.md  actor.sdf  downlaod_gazebo_models.sh  learn_gazebo.md  lidar_node.cc  moving_robot.sdf  myrobot.sdf  senzor_tutorial.sdf  world_demo.sdf
my_project/src/mycobot_moveit_manual/: package.xml  setup.cfg  setup.py
my_project/src/mycobot_moveit_manual/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot_320_pi.srdf
my_project/src/mycobot_moveit_manual/launch/: move_group.launch.py
my_project/src/mycobot_moveit_manual/scripts/: .setup_assistant  xacro2srdf.bash
my_project/src/mycobot_moveit_manual/srdf/: mycobot.srdf.xacro  mycobot_arm.xacro  mycobot_gripper.xacro
nvidia/: nvdia_isaac_notes.md
ros_gazebo/: Readme.md
tutorials/: README.md
tutorials/gazebo_sdfs/: fuel_preview.sdf  render_sensors_server.config  simple_camera.sdf
webots/: 0_webots_getting_started.md
(+37 files in other folders)
